--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Título de la web!</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Página Web</title>
+</head>
+<body>
+    <h1>Bienvenido a mi web en GitHub Pages</h1>
+    <p>Este es un sitio web de ejemplo alojado en GitHub Pages.</p>
+</body>
+</html>
