--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Encabezado con botones -->
     <header>
         <div class="nav-buttons">
-            <button onclick="alert('Botón 1 presionado')">Botón 1</button>
+            <button onclick="window.location.href='https://hackand.github.io/projects/'">Botón 1</button>
             <button onclick="alert('Botón 2 presionado')">Botón 2</button>
             <button onclick="alert('Botón 3 presionado')">Botón 3</button>
         </div>
