--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     <!-- Encabezado con botones -->
     <header>
         <div class="nav-buttons">
-            <button onclick="window.location.href='https://aepalher.github.io/projects/'">Botón 1</button>
-            <button onclick="alert('Botón 2 presionado')">Botón 2</button>
+            <button onclick="window.location.href='https://aepalher.github.io/projects/'">PROYECTOS</button>
+            <button onclick="window.location.href='/proyectos/UNI.html'">UNI</button>
             <button onclick="alert('Botón 3 presionado')">Botón 3</button>
         </div>
     </header>
