--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="nav-buttons">
             <button onclick="window.location.href='https://aepalher.github.io/projects/'">PROYECTOS</button>
             <button onclick="window.location.href='/proyectos/UNI.html'">UNI</button>
-            <button onclick="alert('Botón 3 presionado')">Botón 3</button>
+            <button onclick="window.location.href='/aboutme/aepalher.html'">Botón 3</button>
         </div>
     </header>
 
