--- a/aboutme/aepalher.html
+++ b/aboutme/aepalher.html
@@ -1,1 +1,73 @@
-<h1>WEB DE ABOUTME</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sobre Mí</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding-top: 30px;
+            min-height: 70px;
+            border-bottom: #ccc 3px solid;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 24px;
+        }
+        .main-content {
+            padding: 20px;
+            background: #fff;
+            margin: 20px 0;
+            border-radius: 8px;
+        }
+        .main-content h2 {
+            color: #333;
+        }
+        .main-content p {
+            line-height: 1.6;
+        }
+        footer {
+            background: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            position: absolute;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Sobre Mí</h1>
+        </div>
+    </header>
+
+    <div class="container">
+        <div class="main-content">
+            <h2>Hola, soy [Tu Nombre]</h2>
+            <p>Bienvenido a mi página personal. Soy [Tu Profesión], con experiencia en [Tu Experiencia o Campo]. Me apasiona [Tu Pasión o Intereses].</p>
+            <p>En esta página, encontrarás información sobre mis proyectos, habilidades y cómo puedes ponerte en contacto conmigo.</p>
+        </div>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 [Tu Nombre]. Todos los derechos reservados.</p>
+    </footer>
+</body>
+</html>
