Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <header>
         <div class="nav-buttons">
             <button onclick="window.location.href='https://aepalher.github.io/projects/'">PROYECTOS</button>
-            <button onclick="window.location.href='/proyectos/UNI.html'">UNI</button>
+            <button onclick="window.location.href='/projects/UNI.html'">UNI</button>
             <button onclick="window.location.href='/aboutme/aepalher.html'">Botón 3</button>
         </div>
     </header>
