--- a/projects/UNI.html
+++ b/projects/UNI.html
@@ -79,7 +79,11 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 [Tu Nombre]. Todos los derechos reservados.</p>
+        <p>&copy; <span id="year"></span> Andrés Palomino. Todos los derechos reservados.</p>
     </footer>
+    //JavaSript
+    <script>
+      document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
