--- a/projects/UNI.html
+++ b/projects/UNI.html
@@ -86,6 +86,18 @@
             <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
             <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
         </div>
+        
+        <div class="project">
+            <h2>Proyecto 2: [Nombre del Proyecto]</h2>
+            <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
+            <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
+        </div>
+        
+        <div class="project">
+            <h2>Proyecto 2: [Nombre del Proyecto]</h2>
+            <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
+            <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
+        </div>
 
         <!-- Agrega más proyectos aquí -->
 
