--- a/projects/UNI.html
+++ b/projects/UNI.html
@@ -65,7 +65,7 @@
         }
 
         footer {
-            background: #333;
+            |;
             color: #fff;
             text-align: center;
             padding: 10px;
@@ -114,6 +114,16 @@
 
         <div class="project">
             <h2>Proyecto 6: [Nombre del Proyecto]</h2>
+            <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
+            <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
+        </div>
+        <div class="project">
+            <h2>Proyecto 7: [Nombre del Proyecto]</h2>
+            <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
+            <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
+        </div>
+        <div class="project">
+            <h2>Proyecto 8: [Nombre del Proyecto]</h2>
             <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
             <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
         </div>
