--- a/projects/UNI.html
+++ b/projects/UNI.html
@@ -11,11 +11,9 @@
             padding: 0;
             box-sizing: border-box;
         }
-
         html, body {
             height: 100%; /* Asegura que el body ocupe el 100% de la pantalla */
         }
-
         body {
             display: flex;
             flex-direction: column;
@@ -24,14 +22,12 @@
             margin: 0;
             background-color: #f4f4f4;
         }
-
         .container {
             flex: 1; /* Permite que este div crezca y ocupe el espacio disponible */
             width: 80%;
             margin: auto;
             overflow: hidden;
         }
-
         header {
             background: #333;
             color: #fff;
@@ -40,12 +36,10 @@
             border-bottom: #ccc 3px solid;
             text-align: center;
         }
-
         header h1 {
             margin: 0;
             font-size: 24px;
         }
-
         .project {
             background: #fff;
             margin: 20px 0;
@@ -53,17 +47,14 @@
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-
         .project h2 {
             color: #333;
             font-size: 20px;
         }
-
         .project p {
             line-height: 1.6;
             color: #555;
         }
-
         footer {
             |;
             color: #fff;
@@ -80,61 +71,57 @@
             <h1>Mis Proyectos</h1>
         </div>
     </header>
-
     <div class="container">
         <div class="project">
             <h2>Proyecto 1: [Nombre del Proyecto]</h2>
             <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
             <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
         </div>
-
-        <div class="project">
+        <div class="project1">
             <h2>Proyecto 2: [Nombre del Proyecto]</h2>
             <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
             <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
         </div>
-
-        <div class="project">
+        <div class="project2">
             <h2>Proyecto 3: [Nombre del Proyecto]</h2>
             <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
             <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
         </div>
-
-        <div class="project">
+        <div class="project3">
             <h2>Proyecto 4: [Nombre del Proyecto]</h2>
             <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
             <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
         </div>
-
-        <div class="project">
+        <div class="project4">
             <h2>Proyecto 5: [Nombre del Proyecto]</h2>
             <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
             <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
         </div>
-
-        <div class="project">
+        <div class="project5">
             <h2>Proyecto 6: [Nombre del Proyecto]</h2>
             <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
             <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
         </div>
-        <div class="project">
+        <div class="project6">
             <h2>Proyecto 7: [Nombre del Proyecto]</h2>
             <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
             <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
         </div>
-        <div class="project">
+        <div class="project7">
             <h2>Proyecto 8: [Nombre del Proyecto]</h2>
             <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
             <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
         </div>
-
+        <div class="project8">
+            <h2>Proyecto 9: [Nombre del Proyecto]</h2>
+            <p><strong>Descripción:</strong> Breve descripción del proyecto, qué hace, qué tecnologías se utilizaron, etc.</p>
+            <p><strong>Enlace:</strong> <a href="[Enlace al Proyecto]" target="_blank">Ver Proyecto</a></p>
+        </div>
         <!-- Agrega más proyectos aquí -->
     </div>
-
     <footer>
         <p>&copy; <span id="year"></span> Andrés Palomino. Todos los derechos reservados.</p>
     </footer>
-    
     <script>
         document.getElementById("year").textContent = new Date().getFullYear();
     </script>
