--- a/projects/UNI.html
+++ b/projects/UNI.html
@@ -81,14 +81,14 @@
 
     <script>
         // Cargar el header
-        fetch('header.html')
+        fetch('../header.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('header').innerHTML = data;
             });
 
         // Cargar el footer
-        fetch('footer.html')
+        fetch('../footer.html')
             .then(response => response.text())
             .then(data => {
                 document.getElementById('footer').innerHTML = data;
