--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,21 @@
+<!-- footer.html -->
+<style>
+    footer {
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 10px;
+        position: relative;
+        bottom: 0;
+        width: 100%;
+        font-family: Arial, sans-serif;
+    }
+</style>
+
 <footer>
     <p>&copy; <span id="year"></span> Andrés Palomino. Todos los derechos reservados.</p>
-    <script>
-        document.getElementById("year").textContent = new Date().getFullYear();
-    </script>
 </footer>
+
+<script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+</script>
