--- a/header.html
+++ b/header.html
@@ -1,9 +1,39 @@
+<!-- header.html -->
+<style>
+    header {
+        background: #333;
+        color: #fff;
+        padding: 20px;
+        border-bottom: #ccc 3px solid;
+    }
+    header h1 {
+        margin: 0;
+        font-size: 24px;
+    }
+    .button-container {
+        margin-top: 20px;
+    }
+    .button {
+        display: inline-block;
+        padding: 15px 25px;
+        margin: 10px;
+        font-size: 16px;
+        color: #fff;
+        background-color: #333;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+    }
+    .button:hover {
+        background-color: #555;
+    }
+</style>
+
 <header>
-    <div class="container">
-        <h1>Mis Proyectos</h1>
-        <div class="button-container">
-            <button class="button" onclick="window.location.href='/projects/UNI.html'">UNI</button>
-            <button class="button" onclick="window.location.href='/aboutme/aepalher.html'">Botón 3</button>
-        </div>
+    <h1>Mis Proyectos</h1>
+    <div class="button-container">
+        <button class="button" onclick="window.location.href='/projects/UNI.html'">UNI</button>
+        <button class="button" onclick="window.location.href='/aboutme/aepalher.html'">Botón 3</button>
     </div>
 </header>
