--- a/header.html
+++ b/header.html
@@ -1,5 +1,12 @@
 <!-- header.html -->
 <style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+        text-align: center;
+    }
     header {
         background: #333;
         color: #fff;
@@ -33,7 +40,7 @@
 <header>
     <h1>Mis Proyectos</h1>
     <div class="button-container">
-        <button class="button" onclick="window.location.href='/projects/UNI.html'">UNI</button>
+        <!--<button class="button" onclick="window.location.href='/projects/UNI.html'">UNI</button> -->
         <button class="button" onclick="window.location.href='/aboutme/aepalher.html'">Botón 3</button>
     </div>
 </header>
