--- a/index.html
+++ b/index.html
@@ -63,9 +63,10 @@
     </header>
     <!-- Cuerpo de la página -->
     <main>
-        <h1>Bienvenido a mi Página Web</h1>
-        <p>Este es el cuerpo de la página. Puedes personalizarlo con el contenido que desees.</p>
+        <h1>Bienvenido! Soy Andrés Palomino!</h1>
+        <p>Ingeniero electrónico</p>
     </main>
+    
     <div id="footer"></div>
     
     <script>
