--- a/footer.html
+++ b/footer.html
@@ -13,7 +13,7 @@
 </style>
 
 <footer>
-    <p>&copy; <span id="year"></span> Andrés Palomino. Todos los derechos reservados.</p>
+    <p>&copy; <span id="year"></span> Andrés Palomino. [*] Todos los derechos reservados.</p>
 </footer>
 
 <script>
