--- a/header.html
+++ b/header.html
@@ -38,9 +38,9 @@
 </style>
 
 <header>
-    <h1>Mis Proyectos</h1>
+    <!-- El h1 será definido dinámicamente -->
+    <h1 id="header-title">--</h1>
     <div class="button-container">
-        <!--<button class="button" onclick="window.location.href='/projects/UNI.html'">UNI</button> -->
         <button class="button" onclick="window.location.href='/aboutme/aepalher.html'">Botón 3</button>
     </div>
 </header>
