--- a/header.html
+++ b/header.html
@@ -40,7 +40,8 @@
 <header>
     <!-- El h1 será definido dinámicamente -->
     <h1 id="header-title">--</h1>
-    <div class="button-container">
-        <button class="button" onclick="window.location.href='/aboutme/aepalher.html'">Botón 3</button>
+    <div class="button-container"></div>
+        <button class="button" onclick="window.location.href='/projects/menu.html'">Proyectos</button>
+        <button class="button" onclick="window.location.href='/aboutme/aepalher.html'">About Me!</button>
     </div>
 </header>
