--- a/footer.html
+++ b/footer.html
@@ -3,18 +3,35 @@
         background-color: #333;
         color: #fff;
         text-align: center;
-        padding: 10px;
+        padding: 15px;
         position: relative;
         bottom: 0;
         width: 100%;
         font-family: Arial, sans-serif;
+        box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    footer p {
+        margin: 0;
+        font-size: 14px;
+        line-height: 1.5;
+    }
+
+    /* Agregar espaciado para pantallas más pequeñas */
+    @media (max-width: 600px) {
+        footer p {
+            font-size: 12px;
+        }
     }
 </style>
 
-<footer>
-    <p>&copy; <span id="year"></span> Andrés Palomino. [*] Todos los derechos reservados.</p>
+<footer role="contentinfo">
+    <p>&copy; <span id="year"></span> Andrés Palomino. Todos los derechos reservados. | <a href="#" style="color: #fff; text-decoration: underline;">Términos y Condiciones</a></p>
 </footer>
 
 <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
+    // Asegurarse de que el año se cargue después de que el DOM esté listo
+    document.addEventListener("DOMContentLoaded", function() {
+        document.getElementById("year").textContent = new Date().getFullYear();
+    });
 </script>
