--- a/header.html
+++ b/header.html
@@ -33,7 +33,7 @@
         transition: background-color 0.3s;
     }
     .button:hover {
-        background-color: #555;
+        background-color: #5add81;
     }
 </style>
 
