--- a/aboutme/aepalher.html
+++ b/aboutme/aepalher.html
@@ -11,23 +11,6 @@
             padding: 0;
             background-color: #f4f4f4;
         }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-        header {
-            background: #333;
-            color: #fff;
-            padding-top: 30px;
-            min-height: 70px;
-            border-bottom: #ccc 3px solid;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-            font-size: 24px;
-        }
         .main-content {
             padding: 20px;
             background: #fff;
@@ -40,23 +23,12 @@
         .main-content p {
             line-height: 1.6;
         }
-        footer {
-            background: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-            position: absolute;
-            width: 100%;
-            bottom: 0;
-        }
     </style>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Sobre Mí</h1>
-        </div>
-    </header>
+    <!-- Div donde se cargará el header -->
+    <div id="header"></div>
+
     <div class="container">
         <div class="main-content">
             <h2>Hola, soy [Tu Nombre]</h2>
@@ -64,8 +36,25 @@
             <p>En esta página, encontrarás información sobre mis proyectos, habilidades y cómo puedes ponerte en contacto conmigo.</p>
         </div>
     </div>
-    <footer>
-        <p>&copy; 2024 [Tu Nombre]. Todos los derechos reservados.</p>
-    </footer>
+
+    <!-- Div donde se cargará el footer -->
+    <div id="footer"></div>
+
+    <script>
+        // Cargar el header desde la raíz
+        fetch('../header.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('header').innerHTML = data;
+                // Una vez que el header está cargado, podemos cambiar el título
+                document.getElementById('header-title').textContent = "About me!";
+            });
+        // Cargar el footer desde la raíz
+        fetch('../footer.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer').innerHTML = data;
+            });
+    </script>
 </body>
 </html>
