--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,11 @@
 <style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+        text-align: center;
+    }
     footer {
         background-color: #333;
         color: #fff;
