--- a/header.html
+++ b/header.html
@@ -1,4 +1,3 @@
-<!-- header.html -->
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -8,17 +7,17 @@
         text-align: center;
     }
     header {
-        background: #333;
+        background: #9b9cf3;
         color: #fff;
         padding: 20px;
-        border-bottom: #ccc 3px solid;
+        border-bottom: #e62aa7 33px solid;
     }
     header h1 {
         margin: 0;
         font-size: 24px;
     }
     .button-container {
-        margin-top: 20px;
+        margin-top: 5px;
     }
     .button {
         display: inline-block;
@@ -26,7 +25,7 @@
         margin: 10px;
         font-size: 16px;
         color: #fff;
-        background-color: #333;
+        background-color: #e75050;
         border: none;
         border-radius: 5px;
         cursor: pointer;
